--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
+language: python
 
+services:
+  - docker
+
+before_install:
+  - docker build . -t blzface/future-of-security:backend-$TRAVIS_BUILD_NUMBER
+  - echo "$DockerPassword" | docker login --username "$DockerUsername" --password-stdin; docker push  blzface/future-of-security:backend-$TRAVIS_BUILD_NUMBER
