--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
+sudo: required
+
 language: python
 
 services:
   - docker
 
-before_install:
+after_success:
   - docker build . -t blzface/future-of-security:backend-$TRAVIS_BUILD_NUMBER
   - echo "$DockerPassword" | docker login --username "$DockerUsername" --password-stdin; docker push  blzface/future-of-security:backend-$TRAVIS_BUILD_NUMBER
