--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
-sudo: required
-
 language: python
 
 services:
   - docker
+
+before_install:
+  - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | POETRY_HOME=/opt/poetry python && \
+    cd /usr/local/bin && \
+    ln -s /opt/poetry/bin/poetry && \
+    poetry config virtualenvs.create false
+
+install:
+  - cd /app/
+  - poetry install --no-root --no-dev
 
 after_success:
   - docker build . -t blzface/future-of-security:backend-$TRAVIS_BUILD_NUMBER
