--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
+  - pip install poetry
   - poetry config virtualenvs.create false
 
 install:
-  - cd /app/
   - poetry install --no-root --no-dev
 
 after_success:
